# credits

./: .gitignore  Cargo.toml  README.md  addresolutions.patch  buildvgabios.sh  default.nix  flake.nix  limine.conf  linker.ld  run.sh  rust-toolchain.toml  rustfmt.toml  vgabios.nix
src/: bitmap.rs  draw.rs  interrupts.rs  main.rs  mem.rs  serial.rs  setup.rs  time.rs  utils.rs
