[package]
name = "credits"
version = "0.1.0"
edition = "2021"

[dependencies]
acpi = { version = "5.1.0", default-features = false, features = ["alloc"] }
hashbrown = "0.15.2"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
limine = "0.3.1"
linked_list_allocator = "0.10.5"
log = "0.4.22"
pic8259 = "0.11.0"
spin = "0.9.8"
uart_16550 = "0.3.2"
x86_64 = { version = "0.15.2", default-features = false, features = [ "instructions", "abi_x86_interrupt" ] }
